# jvm-verifier

./: .gitignore  Makefile  README  README.md  RELEASE_README  SBVParser.hs  Utils.hs  build.sh  find-java-rt-jar.sh  jenkins.sh  jvm-verifier.cabal  stage.sh
Analysis/: CFG.hs
Control/Monad/: Exception.hs
Examples/AIG/: ExampleAIG.hs
Examples/ECC/: Makefile  README  verify.bat
Examples/ECC/saw/: Makefile  proofs-old.saw  proofs.org  proofs.saw
Examples/ECC/saw/proofs/: P384ECC64.field_add.saw  P384ECC64.field_dbl.saw  P384ECC64.field_dbl_dec.saw  P384ECC64.field_sub.saw  P384ECC64.is_zero.saw  P384ECC64.set_zero.saw  README  add.saw  array_shift.saw  assign.saw  common.saw  decFieldPrime.saw  decFieldPrime.spec  ec_double.saw  ec_double.spec  ec_full_add.qcspec  ec_full_add.saw  ec_full_add.spec  ec_full_add_bug.saw  ec_full_sub.qcspec  ec_full_sub.saw  ec_full_sub.spec  ec_mul.qcspec  ec_mul.saw  ec_mul.spec  ec_mul_aux.saw  ec_mul_aux.spec  ec_mul_init.saw  ec_mul_init.spec  ec_mul_merge_aux.qcspec  ec_mul_merge_aux.saw  ec_mul_merge_aux.spec  ec_mul_window.qcspec  ec_mul_window.saw  ec_mul_window_aux.saw  ec_mul_window_aux.spec  ec_mul_window_finish.saw  ec_mul_window_finish.spec  ec_twin_mul.qcspec  ec_twin_mul.saw  (+91 more)
Examples/ECC/saw/sbv/: javaish_mul_2_32.sbv  javaish_mul_3_32.sbv  javaish_mul_3_3_32.sbv  javaish_mul_4_32.sbv  javaish_mul_6_32.sbv  p384_join.sbv  p384_ref_mul_aux.sbv  ref_p384_div_step.sbv  ref_p384_half.sbv  ref_p384_neg.sbv  ref_p384_sub.sbv  specialized1_32.sbv  specialized2_32.sbv  (+12 more)
Examples/ECC/saw/sbv-old/: affine_join.sbv  affine_split.sbv  jacobian_join.sbv  jacobian_split.sbv  p384_join768.sbv  p384_join_add_split.sbv  p384_ref_full_add.sbv  p384_ref_mul.sbv  p384_split.sbv  ref_p384_add.sbv  ref_p384_ec_double.sbv  ref_p384_ec_full_sub.sbv  ref_p384_ec_mul.sbv  ref_p384_ec_mul_aux.sbv  ref_p384_is_val.sbv  ref_p384_mod.sbv  ref_p384_mul.sbv  ref_p384_sq.sbv  ref_p384_sq_384.sbv  sref_p384_ec_full_add.sbv  sref_p384_ec_full_sub.sbv  sref_p384_ec_mul.sbv  sref_p384_ec_mul_aux.sbv  sref_p384_fmul.sbv  sref_p384_half.sbv  sref_p384_mul.sbv  sref_p384_points_equal.sbv  sref_p384_sub.sbv
Examples/LocalSpec/: LocalSpec.java  localspec.saw
Examples/PrettyTerm/: PPExample.hs
Examples/QuickCheck/: Example.java  Makefile  example1.saw  example2.saw  example3.saw  example4.saw
Examples/SHA384/: ExampleSHA384.java  Makefile
Execution/: JavaSemantics.hs  Stepper.hs
JavaParser/: Common.hs
Symbolic/: Common.hs  Lit.hs  UnionFind.hs
Symbolic/Lit/: ABC.hs  Pure.hs
Utils/: Common.hs  IOStateT.hs  LogMonad.hs  Simulation.hs
beta-rc1/: README
beta-rc1/doc/: jss-usage.txt
beta-rc1/doc/japi/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html
beta-rc1/tutorial/: JavaMD5Eval.java  compare-sha384.cry
beta-rc2/doc/japi/: allclasses-noframe.html  overview-tree.html  package-list
beta-rc2/tutorial/: JavaMD5.java
doc/: jss-usage.md  jss-usage.txt  jss.1
doc/HCSS/: HCSS.key  abstract.tex
doc/HCSS/figures/: eccplot.plt
doc/japi/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html
doc/japi-tutorial/: Makefile  jss-tutorial.html
doc/japi-tutorial/bib/: jss-tutorial.bib
doc/japi-tutorial/code/: ExampleCNF.cnf  ExampleCNF.java  JavaSHA384.java  MD5.cry  Makefile  SHA2.cry  compare-md5.cry  gen-md5-fm.cmd  gen-sha384-fm.cmd
doc/japi-tutorial/main/: jss-tutorial-after.tex  jss-tutorial-before.html  jss-tutorial-head.tex  jss-tutorial.md  jss-tutorial.tex
doc/sawScriptTutorial/: .gitignore  galois-whitepaper.cls  sawScriptTutorial.SPELLOLD  sawScriptTutorial.tex
jars/: LICENSE.bcprov  README
jdk1.6/java-old/lang/: .Throwable.java.swp  Enum.java  Object.java  Throwable.java
jdk_score/java/lang/: Integer.java
jss/: Backends.hs  Main_jss.hs  Overrides.hs
jvmgraph/: Main.hs
saw/: Java.sawcore
sawscript/SAWScript/: CommandExec.hs  CongruenceClosure.hs  ErrorPlus.hs  Lexer.x  MethodAST.hs  MethodSpec.hs  MethodSpecIR.hs  Parser.y  ParserActions.hs  QuickCheck.hs  SAWScriptMain.hs  SmtLib.hs  SmtLibTrans.hs  SmtLibTrans2.hs  TIMonad.hs  TypeChecker.hs  Utils.hs  Yices.hs
src/: Execution.hs  JarReader.hs  JavaParser.hs  Main_jss.hs  MethodSpec.hs  ProofUtils.hs  SBVParser.hs  Simulation.hs  Symbolic.hs  Utils.hs
src/Analysis/: CFG.hs
src/Execution/: Codebase.hs  JavaSemantics.hs  Stepper.hs
src/IO/: Session.hs
src/JavaParser/: Common.hs
src/SAWScript/: CommandExec.hs  Lexer.x  MethodAST.hs  MethodSpec.hs  MethodSpecIR.hs  Parser.y  QuickCheck.hs  SmtLib.hs  SmtLib2.hs  TIMonad.hs  TypeChecker.hs  Utils.hs  Yices.hs
src/SBVModel/: SBV.hs
src/Symbolic/: Common.hs  Dag.hs  Rewriter.hs
src/Symbolic/Lit/: SatResult.hs
src/Utils/: Assert.hs  CatchMIO.hs  Simulation.hs
src/Verifier/Java/: Backend.hs  Codebase.hs  Common.hs  Debugger.hs  JarReader.hs  MergeFrame.hs  OldSimulator.hs  Parser.hs  SAWBackend.hs  SAWImport.hs  Simulator.hs  SymSimulator.hs  SymStepper.hs  SymTranslation.hs  TestInterface.hs  Utils.hs  WordBackend.hs
src/Verinf/: Symbolic.hs
src/Verinf/Symbolic/: Common.hs  Dag.hs  Lit.hs  OpCache.hs  Rewriter.hs  UnionFind.hs
src/Verinf/Utils/: CacheM.hs
support/: Makefile
test/ashes/: .gitignore  runAshes-win32hack.hs  runAshes.hs
test/src/: Benchmarks.hs  Tests.hs
test/src/Tests/: Arrays.hs  Common.hs  Debugger.hs  ExampleErrorSession.hs  ExampleExceptionSession.hs  ExpectedErrors.hs  JAPI.hs  Lambda.hs  MethodSpec.hs  PathStateMerges.hs  PrettyPrint.hs  PrimOps.hs  RC564.hs  Regressions.hs  RuleChecker.hs  SBVParser.hs  SHA384.hs  Session.hs
test/src/support/: JAPI.java  Lambda.java  Makefile  PathStateMerges.java  Regressions.java  TestRC564.java  TestSHA384.java  Trivial.java  cplus.sbv
user/: AESCryptol.asm  AesCryptolTest.java  AesTest.java  Main.java
user/JavaCryptolAes/: AESCryptol.java  AESCryptolNoTables.java  AesTest.java  PMult.java
util/: changeJRE.sh
(+126 files in other folders)
