Name:           jvm-verifier
Version:        0.4
Author:         Galois Inc.
Maintainer:     jhendrix@galois.com, jstanley@galois.com
Build-type:     Simple
Cabal-version: >= 1.8

Flag build-library
  description: Build the jvm-verifier library.
  default: True

Flag build-jss
  description: Build the JSS executable
  default: True

Flag build-jvmgraph
  description: Build the JVM cfg visualization tool.
  default: False

Flag build-examples
  description: Build the example executables
  default: False

Flag build-benchmarks
  description: Build the benchmark executables
  default: True

library
  build-depends:
      base >= 4
    , abcBridge
    , aig
    , array
    , containers
    , directory
    , filepath
    , haskeline >= 0.7
    , jvm-parser >= 0.2.1
    , lens >= 3.8
    , mtl >= 2.1
    , pretty >= 1.1
    , split >= 0.2
    , transformers >= 0.3
    , tuple >= 0.2
    , vector >= 0.7
    , Verinf >= 0.2
    , saw-core
    , cryptol-verifier

  hs-source-dirs: src

  exposed-modules:
    Data.JVM.Symbolic.AST
    Data.JVM.Symbolic.Translation
    Execution
    Execution.JavaSemantics
    Execution.Stepper
    Verifier.Java.Backend
    Verifier.Java.Codebase
    Verifier.Java.Common
    Verifier.Java.Debugger
    Verifier.Java.SAWBackend
    Verifier.Java.Simulator
    Verifier.Java.Utils
    Verifier.Java.WordBackend
    Verifier.Java.TestInterface

  if !flag(build-library)
    buildable: False

  GHC-options: -Wall -fno-ignore-asserts

executable jss
  if !flag(build-jss)
    buildable: False

  build-depends:
      array
    , base >= 4
    , cmdargs >= 0.6.1
    , containers
    , directory
    , executable-path
    , filepath
    , jvm-parser >= 0.2.1
    , jvm-verifier
    , lens >= 3.8
    , mtl >= 2.1
    , parsec
    , pretty >= 1.1
    , vector >= 0.7
    , Verinf >= 0.2

  other-modules:
    Overrides

  cpp-options   : -DUseSAW

  hs-source-dirs   : jss
  main-is          : Main_jss.hs
  ghc-options      : -O2 -Wall -fno-ignore-asserts
  ghc-prof-options : -prof -auto-all

executable jvmgraph
  if !flag(build-jvmgraph)
    buildable: False

  build-depends:
      base >= 4
    , cmdargs
    , pretty
    , jvm-parser >= 0.2.1

  hs-source-dirs : jvmgraph
  main-is : Main.hs
  ghc-options      : -O2 -Wall -fno-ignore-asserts
  ghc-prof-options : -prof -auto-all

test-suite test-java
  type:       exitcode-stdio-1.0

  build-depends:
      base >= 4
    , array
    , containers
    , directory
    , filepath
    , haskeline >= 0.7
    , jvm-parser >= 0.2.1
    , lens >= 3.8
    , mtl >= 2.1
    , pretty
    , process
    , random >= 1.0.1.0
    , transformers >= 0.3.0.0
    , vector >= 0.7
    , QuickCheck >= 2.4
    , tasty >= 0.10
    , tasty-ant-xml >= 1.0.0.10
    , tasty-hunit
    , tasty-quickcheck

--    , HUnit >= 1.2
--    , test-framework >= 0.8
--    , test-framework-hunit >= 0.3
--    , test-framework-quickcheck2 >= 0.3

    , Verinf
    , jvm-verifier

  main-is          : Tests.hs
  hs-source-dirs   : jss test/src
  ghc-options      : -O2 -Wall -fno-ignore-asserts
  ghc-prof-options : -prof -auto-all

benchmark Benchmarks
  type:       exitcode-stdio-1.0

  if !flag(build-benchmarks)
    buildable: False

  build-depends:
      base >= 4
    , array
    , containers
    , criterion >= 0.6 && < 0.8
    , directory
    , filepath
    , haskeline >= 0.7
    , jvm-parser >= 0.2.1
    , lens >= 3.8
    , mtl >= 2.1
    , pretty
    , process
    , random >= 1.0.1.0
    , transformers >= 0.3.0.0
    , vector >= 0.7
    , QuickCheck >= 2.4

    , tasty
    , tasty-ant-xml
    , tasty-hunit
    , tasty-quickcheck

--    , HUnit >= 1.2
--    , test-framework >= 0.8
--    , test-framework-hunit >= 0.3
--    , test-framework-quickcheck2 >= 0.3
    , Verinf
    , jvm-verifier

  main-is          : Benchmarks.hs
  hs-source-dirs   : jss test/src
  ghc-options      : -O2 -Wall -fno-ignore-asserts

executable ExampleAIG
  if !flag(build-examples)
    buildable: False

  build-depends:
      base >= 4
    , array
    , containers
    , directory
    , filepath
    , jvm-parser >= 0.2.1
    , mtl >= 2.1
    , random >= 1.0.1.0
    , vector >= 0.7
    , QuickCheck >= 2.4.1
    , Verinf

  main-is          : Examples/AIG/ExampleAIG.hs
  hs-source-dirs   : src test/src .
  ghc-options      : -O2 -Wall -fno-ignore-asserts
  ghc-prof-options : -prof -auto-all
