Name:           jvm-verifier
Version:        0.4
Author:         Galois Inc.
Maintainer:     jhendrix@galois.com, jstanley@galois.com
Build-type:     Simple
Cabal-version: >= 1.8
Category:       Formal Methods
Synopsis:       Symbolic simulator for Java bytecode
License:        BSD3
License-file:   LICENSE

extra-source-files: saw/Java.sawcore

Flag build-library
  description: Build the jvm-verifier library.
  default: True

Flag build-jss
  description: Build the JSS executable
  default: True

Flag build-jvmgraph
  description: Build the JVM cfg visualization tool.
  default: False

Flag build-examples
  description: Build the example executables
  default: False

Flag build-benchmarks
  description: Build the benchmark executables
  default: True

library
  build-depends:
      base >= 4 && < 5
    , aig
    , array
    , containers
    , directory
    , exceptions
    , filepath
    , haskeline >= 0.7
    , jvm-parser >= 0.3
    , lens
    , mtl >= 2.1
    , pretty >= 1.1
    , split >= 0.2
    , transformers >= 0.3
    , transformers-compat
    , vector >= 0.7
    , saw-core
    , saw-core-aig
    , cryptol-saw-core

  hs-source-dirs: src

  exposed-modules:
    Data.JVM.Symbolic.AST
    Data.JVM.Symbolic.Translation
    Execution
    Execution.JavaSemantics
    Execution.Stepper
    Verifier.Java.Backend
    Verifier.Java.Codebase
    Verifier.Java.Common
    Verifier.Java.Debugger
    Verifier.Java.SAWBackend
    Verifier.Java.SAWImport
    Verifier.Java.Simulator
    Verifier.Java.Utils
    Verifier.Java.WordBackend
    Verifier.Java.TestInterface
    Verinf.Symbolic
    Verinf.Symbolic.Lit.DataTypes

  other-modules:
    Verinf.Symbolic.Common
    Verinf.Symbolic.Dag
    Verinf.Symbolic.Lit
    Verinf.Symbolic.Lit.Functional
    Verinf.Symbolic.OpCache
    Verinf.Symbolic.Rewriter
    Verinf.Symbolic.UnionFind
    Verinf.Utils.CacheM


  if !flag(build-library)
    buildable: False

  GHC-options: -Wall -fno-ignore-asserts -Wcompat
  if impl(ghc == 8.0.1)
    ghc-options: -Wno-redundant-constraints

  if os(darwin)
    -- fix the weird Trace/BPT trap: 5 bug on rail
    ghc-options: -j1

executable jss
  if !flag(build-jss)
    buildable: False

  build-depends:
      array
    , abcBridge >= 0.17.1
    , base >= 4
    , cmdargs >= 0.6.1
    , containers
    , directory
    , executable-path
    , filepath
    , jvm-parser >= 0.3
    , jvm-verifier
    , lens >= 3.8
    , mtl >= 2.1
    , parsec
    , pretty >= 1.1
    , transformers
    , transformers-compat
    , vector >= 0.7

  other-modules:
    Backends
    Overrides
    Verinf.Symbolic.Lit.ABC
    Verinf.Symbolic.Lit.ABC_GIA

  cpp-options: -DUseSAW

  hs-source-dirs: jss
  main-is: Main_jss.hs
  ghc-options: -O2 -Wall -fno-ignore-asserts -pgmlc++ -Wcompat
  extra-libraries:      stdc++

executable jvmgraph
  if !flag(build-jvmgraph)
    buildable: False

  build-depends:
      base >= 4
    , cmdargs
    , pretty
    , jvm-parser >= 0.3

  hs-source-dirs : jvmgraph
  main-is : Main.hs
  ghc-options: -O2 -Wall -fno-ignore-asserts -Wcompat

test-suite test-java
  type:       exitcode-stdio-1.0

  build-depends:
      base >= 4
    , abcBridge >= 0.17.1
    , array
    , containers
    , directory
    , filepath
    , haskeline >= 0.7
    , jvm-parser >= 0.3
    , lens >= 3.8
    , mtl >= 2.1
    , pretty
    , process
    , random >= 1.0.1.0
    , transformers >= 0.3.0.0
    , vector >= 0.7
    , QuickCheck >= 2.4
    , tasty
    , tasty-ant-xml
    , tasty-hunit
    , tasty-quickcheck
    , jvm-verifier

  main-is          : Tests.hs
  hs-source-dirs   : jss test/src
  other-modules    :
    Backends
    Overrides
    Tests.Arrays
    Tests.Common
    Tests.Debugger
    Tests.ExpectedErrors
    Tests.JAPI
    Tests.Lambda
    Tests.PathStateMerges
    Tests.PrimOps
    Tests.RC564
    Tests.Regressions
    Tests.SHA384
    Verinf.Symbolic.Lit.ABC
  ghc-options: -O2 -Wall -fno-ignore-asserts -pgmlc++ -Wcompat
  extra-libraries:      stdc++

benchmark Benchmarks
  type:       exitcode-stdio-1.0

  if !flag(build-benchmarks)
    buildable: False

  build-depends:
      base >= 4
    , abcBridge >= 0.17.1
    , array
    , containers
    , statistics >= 0.10
    , criterion >= 0.6
    , directory
    , filepath
    , haskeline >= 0.7
    , jvm-parser >= 0.3
    , lens >= 3.8
    , mtl >= 2.1
    , pretty
    , process
    , random >= 1.0.1.0
    , transformers >= 0.3.0.0
    , vector >= 0.7
    , QuickCheck >= 2.4

    , tasty
    , tasty-ant-xml
    , tasty-hunit
    , tasty-quickcheck

    , jvm-verifier

  main-is          : Benchmarks.hs
  hs-source-dirs   : jss test/src
  ghc-options: -O2 -Wall -fno-ignore-asserts -pgmlc++ -Wcompat
  extra-libraries:      stdc++
